notification/deployments/blue-green/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service-notification
  namespace: notification
spec:
  selector:
    app: notification
    version: green
  ports:
  - protocol: TCP
    port: 83
    targetPort: 8083
